added curly brackets

--- a/Fjenk/Jenkinsfile
+++ b/Fjenk/Jenkinsfile
@@ -13,8 +13,9 @@ pipeline {
         }
         stage("Docker build") {
             steps {
-                dir("Docker/")
+                dir("Docker/") {
                 sh "docker build ."
+                }
             }
         }
     }
