--- a/Fjenk/Jenkinsfile
+++ b/Fjenk/Jenkinsfile
@@ -5,6 +5,7 @@ pipeline {
     options {
         timestamps()
     }
+    trigger { pollSCM("* * * * *") }
     stages {
         stage("Just command") {
             steps {
