--- a/Fjenk/Jenkinsfile
+++ b/Fjenk/Jenkinsfile
@@ -14,6 +14,7 @@ pipeline {
         }
         stage("Docker build") {
             steps {
+                echo "======= Build docker image ======="
                 dir("Docker/") {
                 sh "docker build ."
                 }
