--- a/Fjenk/Jenkinsfile
+++ b/Fjenk/Jenkinsfile
@@ -9,8 +9,8 @@ pipeline {
     stages {
         stage("Dockerhub login") {
             steps {
-                withCredentials([usernamePassword(credentialsId: "dockerhub_cred", usernameVariable: "USER", passwordVariable: "PASSWORD")]) {
-                sh "docker login -u $USER -p $PASSWORD"
+                withCredentials([usernamePassword(credentialsId: 'dockerhub_cred', usernameVariable: 'USER', passwordVariable: 'PASSWORD')]) {
+                sh 'docker login -u $USER -p $PASSWORD'
                 }
             }
         }
