--- a/Fjenk/Jenkinsfile
+++ b/Fjenk/Jenkinsfile
@@ -1,30 +1,32 @@
-properties ([disableConcurrentBuilds()])
+properties([disableConcurrentBuild()])
 
 pipeline {
     agent any
     options {
         timestamps()
     }
-    triggers { pollSCM("* * * * *") }
+    triggers{pollSCM("* * * * *")}
     stages {
-        stage("Dockerhub login") {
+        stage("Docker_login") {
             steps {
-                withCredentials([usernamePassword(credentialsId: 'dockerhub_cred', usernameVariable: 'USER', passwordVariable: 'PASSWORD')]) {
-                sh 'docker login -u $USER -p $PASSWORD'
+                echo "======= Docker login ======="
+                withCredentials([usernamePassword(credentialsId: "dockerhub_cred", usernameVariable: "USER", passwordVariable: "PASSWORD")]){
+                    sh "docker login -u $USER -p $PASSWORD"
                 }
             }
         }
-        stage("Docker build") {
+        stage("Docker_build") {
             steps {
-                echo "======= Build docker image ======="
-                dir("Docker/") {
-                sh "docker build -t bourbol/tinytoss:3.14 ."
+                echo "======= Docker build ======="
+                dir("Docker/"){
+                    sh "docker build -t bourbol/jumanji:2.0 ."
                 }
             }
         }
-        stage("Docker push") {
+        stage("Docker_push") {
             steps {
-            sh "docker push bourbol/tinytoss:3.14"
+                echo "======= Docker push ======="
+                sh "docker push bourbol/jumanji:2.0"
             }
         }
     }
