added echo command to Docker push stage

--- a/Fjenk/Jenkinsfile
+++ b/Fjenk/Jenkinsfile
@@ -27,6 +27,7 @@ pipeline {
             steps {
                 echo "======= Docker push ======="
                 sh "docker push bourbol/jumanji:2.0"
+                echo "======= If you see this string, then project successfully builded"
             }
         }
     }
